gap fix

--- a/src/components/scss/_variables.scss
+++ b/src/components/scss/_variables.scss
@@ -1,7 +1,7 @@
 :root {
   // --icon: #0c410749;
-  --dbg: #374151;
-  --icon: #374151;
+  --dbg: #0a0a0a;
+  --icon: #00ff88;
   --bodyC: #ffffff;
 }
 
